# BIDFLOW-PLATAFORM

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  turbo.json
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/templates/: spec-yaml-template.yml
.specify/workflows/: workflow-registry.json
apps/analytics/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
apps/analytics/src/: main.py
apps/analytics/src/analytics/: bid_processor.py
apps/analytics/src/app/: __init__.py  database.py  models.py  schemas.py
apps/analytics/src/app/routers/: analytics.py  auctions.py  bids.py  dashboard.py
apps/analytics/src/consumers/: tender_events_consumer.py
apps/analytics/src/schemas/: events.py
apps/analytics/tests/analytics/: test_bid_processor.py
apps/api/: Dockerfile.prod  append.js  fix.js  package.json  test-websocket.html  tsconfig.json  webpack-fix.js
apps/api-gateway/: Dockerfile
apps/rpa/: Dockerfile.prod  rpa_bid_submitter.py  rpa_tender_sender.py
apps/web/: Dockerfile  Dockerfile.prod  next.config.js  package.json  tailwind.config.js  tsconfig.json
docs/: README.md  architecture-principles.md  coding-standards.md
docs/adr/: ADR-001-multi-tenant.md  ADR-002-ddd.md  ADR-003-event-driven.md  ADR-004-workflow-engine.md  ADR-005-monorepo.md
docs/architecture/: CODE-CONVENTIONS.md  DDD-ARCHITECTURE.md  README.md  (+17 more)
(+276 files in other folders)
